<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    >


    <ImageView
        android:layout_width="300sp"
        android:layout_height="300sp"
        android:layout_gravity="center"
        android:id="@+id/imageView"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Classifiedas"
        android:textStyle="bold"
        android:textSize="20sp"
        android:id="@+id/classified"
        android:layout_marginTop="10sp"


        />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text=""
        android:textColor="#C30000"
        android:textSize="35sp"
        android:layout_margin="10dp"
        android:id="@+id/result"
        />


        <TextView


            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/prevent"
            android:text="@string/prevent"
            android:textColor="#0A23AE"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center"


            />






    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:textSize="1sp"
        android:id="@+id/confidence"
        android:visibility="invisible"
        />


    <Button
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:text="@string/camera"
        android:textAllCaps="false"
        android:textSize="21sp"
        android:textStyle="bold"
        android:background="@drawable/white_rectangle"
        />

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/galary"
        android:textAllCaps="false"
        android:textSize="21sp"
        android:textStyle="bold"
        android:background="@drawable/white_rectangle"
        />

</LinearLayout>
